world APIs. (#71)
* world APIs.

* world data and instructions in readme.md.
