# swagger.json
@@ -10388,6 +10388,247 @@
 					}
 				}
 			}
+		},
+		"/world/countries": {
+			"get": {
+				"tags": ["World"],
+				"description": "Get Countries",
+				"parameters": [],
+
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json; charset=utf-8": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"data": {
+											"type": "object",
+											"properties": {
+												"message": {
+													"type": "object",
+													"$ref": "#/components/schemas/Message"
+												}
+											}
+										},
+										"message": {
+											"token": "string"
+										},
+										"code": {
+											"type": "integer"
+										}
+									}
+								},
+								"example": {
+									"data": [
+										{
+											"id": 1,
+											"name": "Afghanistan",
+											"iso3": "AFG",
+											"numeric_code": "004",
+											"iso2": "AF",
+											"phonecode": "93",
+											"capital": "Kabul",
+											"currency": "AFN",
+											"currency_name": "Afghan afghani",
+											"currency_symbol": "؋",
+											"tld": ".af",
+											"native": "افغانستان",
+											"region": "Asia",
+											"subregion": "Southern Asia",
+											"timezones": "[{\"zoneName\":\"Asia/Kabul\",\"gmtOffset\":16200,\"gmtOffsetName\":\"UTC+04:30\",\"abbreviation\":\"AFT\",\"tzName\":\"Afghanistan Time\"}]",
+											"translations": "{\"kr\":\"아프가니스탄\",\"pt-BR\":\"Afeganistão\",\"pt\":\"Afeganistão\",\"nl\":\"Afghanistan\",\"hr\":\"Afganistan\",\"fa\":\"افغانستان\",\"de\":\"Afghanistan\",\"es\":\"Afganistán\",\"fr\":\"Afghanistan\",\"ja\":\"アフガニスタン\",\"it\":\"Afghanistan\",\"cn\":\"阿富汗\",\"tr\":\"Afganistan\"}",
+											"latitude": "33.00000000",
+											"longitude": "65.00000000",
+											"emoji": "🇦🇫",
+											"emojiU": "U+1F1E6 U+1F1EB",
+											"created_at": "2018-07-21T07:11:03.000Z",
+											"updated_at": "2022-05-21T21:06:00.000Z",
+											"flag": 1,
+											"wikiDataId": "Q889"
+										},
+										{
+											"id": 2,
+											"name": "Aland Islands",
+											"iso3": "ALA",
+											"numeric_code": "248",
+											"iso2": "AX",
+											"phonecode": "+358-18",
+											"capital": "Mariehamn",
+											"currency": "EUR",
+											"currency_name": "Euro",
+											"currency_symbol": "€",
+											"tld": ".ax",
+											"native": "Åland",
+											"region": "Europe",
+											"subregion": "Northern Europe",
+											"timezones": "[{\"zoneName\":\"Europe/Mariehamn\",\"gmtOffset\":7200,\"gmtOffsetName\":\"UTC+02:00\",\"abbreviation\":\"EET\",\"tzName\":\"Eastern European Time\"}]",
+											"translations": "{\"kr\":\"올란드 제도\",\"pt-BR\":\"Ilhas de Aland\",\"pt\":\"Ilhas de Aland\",\"nl\":\"Ålandeilanden\",\"hr\":\"Ålandski otoci\",\"fa\":\"جزایر الند\",\"de\":\"Åland\",\"es\":\"Alandia\",\"fr\":\"Åland\",\"ja\":\"オーランド諸島\",\"it\":\"Isole Aland\",\"cn\":\"奥兰群岛\",\"tr\":\"Åland Adalari\"}",
+											"latitude": "60.11666700",
+											"longitude": "19.90000000",
+											"emoji": "🇦🇽",
+											"emojiU": "U+1F1E6 U+1F1FD",
+											"created_at": "2018-07-21T07:11:03.000Z",
+											"updated_at": "2022-05-21T21:06:00.000Z",
+											"flag": 1,
+											"wikiDataId": null
+										}]}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/world/regions": {
+			"get": {
+				"tags": ["World"],
+				"description": "Get Regions",
+				"parameters": [{
+						"name": "countryId",
+						"in": "query",
+						"description": "Country Id",
+						"required": true,
+						"type": "string"
+				}],
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json; charset=utf-8": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"data": {
+											"type": "object",
+											"properties": {
+												"message": {
+													"type": "object",
+													"$ref": "#/components/schemas/Message"
+												}
+											}
+										},
+										"message": {
+											"token": "string"
+										},
+										"code": {
+											"type": "integer"
+										}
+									}
+								},
+								"example": {
+									"data": [
+										{
+											"id": 48,
+											"name": "Ashanti",
+											"country_id": 83,
+											"country_code": "GH",
+											"fips_code": "02",
+											"iso2": "AH",
+											"type": "region",
+											"latitude": "6.74704360",
+											"longitude": "-1.52086240",
+											"created_at": "2019-10-05T17:48:36.000Z",
+											"updated_at": "2021-10-30T16:08:55.000Z",
+											"flag": 1,
+											"wikiDataId": "Q398417"
+										},
+										{
+											"id": 49,
+											"name": "Western",
+											"country_id": 83,
+											"country_code": "GH",
+											"fips_code": "09",
+											"iso2": "WP",
+											"type": "region",
+											"latitude": "5.50000000",
+											"longitude": "-2.50000000",
+											"created_at": "2019-10-05T17:48:36.000Z",
+											"updated_at": "2021-10-30T16:08:55.000Z",
+											"flag": 1,
+											"wikiDataId": "Q870155"
+										}
+									]
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/world/cities": {
+			"get": {
+				"tags": ["World"],
+				"description": "Get Cities",
+				"parameters": [{
+						"name": "regionId",
+						"in": "query",
+						"description": "Region Id",
+						"required": true,
+						"type": "string"
+				}],
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json; charset=utf-8": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"data": {
+											"type": "object",
+											"properties": {
+												"message": {
+													"type": "object",
+													"$ref": "#/components/schemas/Message"
+												}
+											}
+										},
+										"message": {
+											"token": "string"
+										},
+										"code": {
+											"type": "integer"
+										}
+									}
+								},
+								"example": {
+									"data": [
+										{
+											"id": 57588,
+											"name": "Abrama",
+											"state_id": 4030,
+											"state_code": "GJ",
+											"country_id": 101,
+											"country_code": "IN",
+											"latitude": "20.85865000",
+											"longitude": "72.90648000",
+											"created_at": "2019-10-06T00:23:43.000Z",
+											"updated_at": "2019-10-06T00:23:43.000Z",
+											"flag": 1,
+											"wikiDataId": "Q490916"
+										},
+										{
+											"id": 57591,
+											"name": "Adalaj",
+											"state_id": 4030,
+											"state_code": "GJ",
+											"country_id": 101,
+											"country_code": "IN",
+											"latitude": "23.16453000",
+											"longitude": "72.58107000",
+											"created_at": "2019-10-06T00:23:43.000Z",
+											"updated_at": "2019-10-06T00:23:43.000Z",
+											"flag": 1,
+											"wikiDataId": "Q2350169"
+										}
+	]
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"components": {
